# ebdms

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
ebdms/: manage.py
ebdms/accounts/: admin.py  adminapps.py  adminsites.py  middleware.py  otp_views.py
ebdms/biobank/: admin.py  apps.py  models.py  signals.py  tests.py
ebdms/biobank/migrations/: 0001_initial.py  0002_alter_aliquot_created_at_alter_aliquot_updated_at_and_more.py  0002_alter_aliquot_options_alter_donor_options_and_more.py  0002_initial.py  0002_remove_aliquot_aliquot_box_grid_idx_and_more.py  0002_remove_aliquot_quality_remove_aliquot_quality_units.py  0003_alter_aliquot_options_alter_specimen_options.py  0003_alter_aliquot_options_alter_specimen_options_and_more.py  0003_alter_aliquot_preparation_method_and_more.py  0003_rename_project_code_project_project_id.py  0004_alter_storage_conditions.py  0004_donor_name_donor_surname_historicaldonor_name_and_more.py  0005_aliquot_updated_at_box_created_at_box_updated_at_and_more.py  0006_remove_aliquot_aliquot_specimen_created_idx_and_more.py
ebdms/core/: admin.py  apps.py  middleware.py  models.py  otp_views.py  qr.py
ebdms/core/migrations/: 0001_initial.py  0002_alter_projectrole_unique_together_and_more.py
ebdms/ebdms/: asgi.py  settings.py  urls.py  views.py  wsgi.py
ebdms/ehr/: admin.py  forms_dynamic.py  models.py  tests.py  views.py
ebdms/ehr/migrations/: 0001_initial.py  0002_alter_ehrrecord_data.py  0002_alter_form_created_at_alter_form_description_and_more.py  0002_alter_form_description.py  0002_alter_formfield_options_and_more.py  0002_initial.py  0002_remove_formfield_uniq_form_field_order.py  0003_alter_assignment_created_at_and_more.py  0003_alter_formfield_options.py  0003_alter_historicalresponse_result_and_more.py  0003_remove_formfield_allowed_extensions_and_more.py  0004_alter_form_options.py  0004_alter_form_slug_alter_historicalform_slug_and_more.py  0004_alter_response_options_and_more.py  0005_alter_formfield_choices_and_more.py  0005_assignment_remove_form_slug_and_more.py  0006_alter_formfield_choices.py  0007_remove_assignment_token.py
ebdms/lims/: admin.py  apps.py  models.py  signals.py  tests.py
ebdms/lims/migrations/: 0001_initial.py  0002_alter_order_options_alter_stockitem_options_and_more.py  0002_historicalstockitem_ref_stockitem_ref_and_more.py  0002_initial.py  0002_tag_lnotebook.py  0003_alter_document_created_at_alter_document_updated_at_and_more.py  0003_lnotebooktag_created_at_lnotebooktag_updated_at_and_more.py  (+5 more)
ebdms/ngs/: admin.py  apps.py  models.py
ebdms/ontologies/: admin.py  models.py
ebdms/projects/: admin.py  models.py  tests.py
(+81 files in other folders)
